Fixing display issue with flicker fix

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -120,8 +120,9 @@ form.std .error .ex { opacity: 0.7; font-size: 0.9em; text-align: center; }
 .external ul { padding: 1em 1em 1px; margin: 0 0 1em; background: rgba(0,0,0,0.1); }
 .external ul.teams { position: relative; }
 .external ul.teams li { padding: 1em; list-style: none; margin-bottom: 1em; }
-.external ul.teams li.team { padding: 0; line-height: 2em; }
-.external ul.teams li.team a { padding: 0; display: block; background: rgba(255,255,255,0.1); color: rgba(255,255,255,0.8); font-size: 1.2em; }
+.external ul.teams li.team { padding: 0;  }
+.external ul.teams li.placeholder { line-height: 2em; }
+.external ul.teams li.team a { padding: 0; line-height: 2em; display: block; background: rgba(255,255,255,0.1); color: rgba(255,255,255,0.8); font-size: 1.2em; }
 .external ul.teams li.team a:focus { outline: 4px solid rgba(0,0,0,0.2); }
 .external ul.teams li.team a .i-wrap { float: left; margin-right: 0.5em; }
 .external ul.teams li.team a i { width: 2em; float: left; text-align: center; padding-right: 0.1em; }
@@ -131,8 +132,6 @@ form.std .error .ex { opacity: 0.7; font-size: 0.9em; text-align: center; }
 .external ul.teams li.team a div.summary .count { font-size: 0.6em; display: block; line-height: 0.9em; text-align: center; opacity: 0.7; }
 .external ul.teams li.team a .pending { float: right; margin: 0 1em; opacity: 0.7; font-size: 0.8em; line-height: 2.5em; }
 .external ul.teams li.team a .failed { opacity: 1; }
-.external ul.teams li.placeholder { font-size: 0.9em; }
-.external ul.teams li.placeholder h3 { margin-bottom: 0.5em; }
 .external ul.teams div.teams-loading { position: absolute; left: 0; right: 0; top: 50%; margin-top: -0.5em; text-align: center; vertical-align: middle; }
 
 .external a.team-new { display: block; text-align: center; margin-bottom: 1em; }
